2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gamewin.cc: only write to cfg once in Game_window::Game_window

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.cc, gamewin.*: Add new cfg option to disable scrolling
		the game view with the scrollwheel (when in cheat mode).
		"config/gameplay/scroll_with_mouse" "yes" to allow scrolling.
		"no" to disable it. Default is "no".

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* gumps/VideoOptions_gump.cc: Straiten out row values. More
		code changes for separate fullscreen and window settings
	* data/*: new video options gump shape added

2011-01-15 Malignant Manor <malignantmanor@users.sourceforge.net>
	* exult.*, keyactions.cc, gumps/VideoOptions_gump.*: New function
		"setup_video" to consolidate menu settable video configuration
		reading and writing and implementing it into existing code.
		Start code changes for separate fullscreen and window settings.

2011-01-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* schedule.cc: Increase search range for clothes in sew sched.
	* audio/audio.cc: Fix midi sfx not playing.
	* gumps/AudioOptions_gump.cc: Fix midi_sfx conversion after
		revision 6703 changed conversion numbers.
	* configure.ac: Stressing that midi_sfx will likely sound terrible

2011-01-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* configure.ac: Add --enable-midi-sfx configure option
	* version.cc: ENABLE_MIDISFX shows as a Compile-time option
	* gumps/AudioOptions_gump.cc: If MT32 was in config make it
		Fake MT32 for CoreAudio (default OSX).

2011-01-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* fnames.h, audio/midi.cc: Use u7intro.tim sysex info for
		BG intro. (MT-32)

2011-01-09 Malignant Manor <malignantmanor@users.sourceforge.net>
	* audio\midi_drivers\XMidiFile.h, gumps\AudioOptions_gump.cc:
		CoreAudio (default for OSX) no longer has MT-32 as an option.
